# Liquor-Store-Management-System

./: Beer.c  Beer.h  BinaryFiles.c  BinaryFiles.h  BinaryFunctions.c  BinaryFunctions.h  BringThemHome.c  BringThemHome.h  BringThemHomeNow.c  BringThemHomeNow.h  CMakeLists.txt  Customer.c  Customer.h  Date.c  Date.h  Filefunctions.c  Filefunctions.h  General.c  GeneralFunctions.c  GeneralFunctions.h  Inventory.c  Inventory.h  Inventory.txt  LIQUOR_STORE.sln  LIQUOR_STORE.vcxproj  LIQUOR_STORE.vcxproj.filters  README.md  Reservation.c  Reservation.h  Sales.c  Sales.h  Shop.c  Shop.h  Whiskey.c  Whiskey.h  Wine.c  Wine.h  baseInventory.txt  customer_list.txt  customer_list_saveTo.txt  (+9 more)
